<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorBurem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
                android:id="@+id/back1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text=" Layanan Perumahan"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#fff" />
    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.CardView
            android:id="@+id/con1"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPutih"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_height="100dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text= "@string/title"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:maxLines="3"
                    android:layout_marginLeft="235dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/description"
                    android:textColor="#222"
                    android:textSize="16dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPutih"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_height="100dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/title2"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title2"
                    android:maxLines="3"
                    android:layout_marginLeft="235dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/harga2"
                    android:textColor="#222"
                    android:textSize="16dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPutih"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_height="100dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/title3"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title3"
                    android:maxLines="3"
                    android:layout_marginLeft="235dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/harga3"
                    android:textColor="#222"
                    android:textSize="16dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPutih"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_height="100dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/title4"
                    android:textColor="#222"
                    android:textStyle="bold"
                    android:textSize="22dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title4"
                    android:maxLines="3"
                    android:layout_marginLeft="235dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/harga4"
                    android:textColor="#222"
                    android:textSize="16dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>